// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider /> should create a divider component 1`] = `
<View
  display="flex"
  flexDirection="column"
  justifyContent="space-between"
  minWidth={300}
  style={
    [
      {
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-between",
        "minWidth": 300,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 24,
          "fontWeight": "500",
          "lineHeight": 32,
        },
      ]
    }
  >
    First Content
  </Text>
  <View
    style={
      [
        {
          "borderBottomWidth": 1,
          "borderColor": "#D7D7E0",
          "width": "auto",
        },
      ]
    }
    vertical={false}
  />
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 24,
          "fontWeight": "500",
          "lineHeight": 32,
        },
      ]
    }
  >
    Second Content
  </Text>
</View>
`;

exports[`<Divider /> should create vertical divider component 1`] = `
<View
  display="flex"
  flexDirection="row"
  justifyContent="space-between"
  minWidth={300}
  style={
    [
      {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minWidth": 300,
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 24,
          "fontWeight": "500",
          "lineHeight": 32,
        },
      ]
    }
  >
    First Content
  </Text>
  <View
    style={
      [
        {
          "borderColor": "#D7D7E0",
          "borderLeftWidth": 1,
          "height": "auto",
        },
      ]
    }
    vertical={true}
  />
  <Text
    style={
      [
        {
          "color": "#231B22",
          "fontFamily": "Rubik",
          "fontSize": 24,
          "fontWeight": "500",
          "lineHeight": 32,
        },
      ]
    }
  >
    Second Content
  </Text>
</View>
`;
